# bevy-real-ai

./: .gitignore  Cargo.toml  MODEL_DOWNLOAD_USAGE.md  MODEL_INFO.md  README.md
.github/workflows/: rust.yml
bevy_real_ai_derive/: Cargo.toml
bevy_real_ai_derive/src/: lib.rs
examples/: actions.rs  basic.rs  basic_dialogue.rs  npc.rs  npc_dialogue.rs  typed_actions.rs
examples/common/: mod.rs
src/: actions.rs  app_ext.rs  context.rs  dialogue.rs  lib.rs  models.rs  npc_dialogue.rs  parse.rs  rag.rs  test_helpers.rs
tests/: context.rs  dialogue.rs  rag.rs  structured_parser.rs
