[package]
name = "bevy_ai_dialogue"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy = "0.18"
flume = "0.12"
thiserror = "2.0"
# For backend unit tests helper
tempfile = { version = "3.24", optional = true }
# Serde for toy model parsing and tests
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "2.6"
crossbeam-channel = "0.5"
kalosm = { version = "0.4", features = ["language"], optional = true }
tokio = { version = "1.49", features = ["full"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
kalosm = { version = "0.4", features = ["language", "metal"], optional = true }

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
kalosm = { version = "0.4", features = ["language"], optional = true }

[features]
default = ["kalosm"]
default-test = ["default", "tempfile"]
gpu = ["kalosm/metal", "kalosm/cuda"]
cuda = ["kalosm/cuda"]
metal = ["kalosm/metal"]


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3