[package]
name = "bevy_real_ai"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "bevy_real_ai_derive"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy = "0.18"
flume = "0.12"
thiserror = "2.0"
# For backend unit tests helper
tempfile = { version = "3.24", optional = true }
# Serde for toy model parsing and tests
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "2.6"
crossbeam-channel = "0.5"
kalosm = { version = "0.4", features = ["language", "openai"], optional = true }
tokio = { version = "1.49", features = ["full"] }
zeroize ={ version = "1.8" }
console = "0.16"
kalosm-sample = "0.4"
bevy_real_ai_derive = { path = "bevy_real_ai_derive" }
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
kalosm = { version = "0.4", features = ["language", "openai", "metal"], optional = true }

[features]
default = ["kalosm"]
default-test = ["default", "tempfile"]
gpu = ["kalosm/metal", "kalosm/cuda"]
cuda = ["kalosm/cuda"]


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
