[package]
name = "bevy_real_ai_derive"
version = "0.1.3"
edition = "2024"
description = "Derive macros for Bevy Real AI."
authors = ["captkirk88 <github.com/captkirk88>"]
repository = "https://github.com/captkirk88/bevy-real-ai"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"